Fix container widht. Fix footer position on small pages.

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -77,6 +77,8 @@
   margin-top: 50px;
 
   article {
+    margin-top: 100px;
+
     &:not(:first-of-type) {
       margin-top: 40px;
     }
